--- a/keymouse/hoverme.html
+++ b/keymouse/hoverme.html
@@ -14,6 +14,7 @@
 <div class="hover">
     <div class="hoverMe"></div>
     <div class="hoverMe"></div>
+    <div class="hide"></div>
     <div class="nose"></div>
     <div class="miam"></div>
 </div>
