--- a/keymouse/hoverme.html
+++ b/keymouse/hoverme.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="mouse">
+  <div class="axe-x"></div>
   <div class="content"></div>
 <div class="display">
 </div>
@@ -20,7 +22,9 @@
 </div>
 <div class="content"></div>
 <div class="end"></div>
-<div id="reset">Reset</div>
+<div class="reset" id="reset">Reset</div>
+<div class="axe-y"></div>
+</div>
   <script src="app.js"></script>
 </body>
 </html>
