--- a/11_keyboard/index.html
+++ b/11_keyboard/index.html
@@ -8,7 +8,12 @@
   <title>Keyboard Event</title>
 </head>
 <body>
-  <div id="character" class="character"></div>
+  <div id="character" class="character"></div>  
+  <div id="up" class="up"></div>
+  <div id="left" class="left"></div>
+  <div id="right" class="right"></div>
+  <div id="down" class="down"></div>
+  
   <script src="app.js"></script>
 </body>
 </html>
