--- a/mastermind/index.html
+++ b/mastermind/index.html
@@ -12,8 +12,8 @@
     <div class="title">MasterMind</div>
     <div class="sun"></div>
     <div class="cercle"></div>
-</div>
-    <!-- <div class="historic">
+</div> 
+     <div class="historic">
 
     </div>
 
@@ -23,7 +23,7 @@
 
     <div class="pickcolor">
       
-    </div>   -->
+    </div>  
 
 <audio autoplay>
   <source src="assets/tintata.mp3" type="audio/mpeg">
