--- a/clicker/index.html
+++ b/clicker/index.html
@@ -9,6 +9,7 @@
 <body>
   <button class="click">Click</button>
   <button class="multiplicator">Multiplicator</button>
+  <button class="autoclicker">Autoclick</button>
   <div class="affichage"></div>
   <div class="multiply"></div>
   <script src="assets/app.js"></script>
