--- a/clicker/index.html
+++ b/clicker/index.html
@@ -10,6 +10,7 @@
   <button class="click">Click</button>
   <button class="multiplicator">Multiplicator</button>
   <button class="autoclicker">Autoclick</button>
+  <button class="bonus">Bonus 200%</button>
   <div class="affichage"></div>
   <div class="multiply"></div>
   <script src="assets/app.js"></script>
