add task/step appendchild

--- a/clicker/index.html
+++ b/clicker/index.html
@@ -7,6 +7,7 @@
   <title>Clicker</title>
 </head>
 <body>
+  <div class="multi"></div>
   <button class="click">Click</button>
   <button class="multiplicator">Multiplicator</button>
   <button class="autoclicker">Autoclick</button>
