--- a/clicker/index.html
+++ b/clicker/index.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="assets/style.css">
   <title>Clicker</title>
 </head>
 <body>
-  <div class="multi"></div>
-  <button class="click">Click</button>
+  
+  <section class="stage">
+    <button class="click">
+      <span class="shadow"></span>
+    </button>
+</section>
+  <div class="affichage"></div>
   <button class="multiplicator">Multiplicator</button>
   <button class="autoclicker">Autoclick</button>
   <button class="bonus">Bonus 200%</button>
-  <div class="affichage"></div>
   <div class="multiply"></div>
   <script src="assets/app.js"></script>
 </body>
