--- a/vanilla/ex2/ex1/index.html
+++ b/vanilla/ex2/ex1/index.html
@@ -12,6 +12,9 @@
       opacity : 0.7;
       left : 100px;
       top : 10px;
+      padding : 5px;
+      border-radius : 2px;
+      color : white;
     }
   </style>
 </head>
