--- a/vanilla/ex3/index.html
+++ b/vanilla/ex3/index.html
@@ -15,10 +15,29 @@
       <label for="number"></label>
       <input id="number" type="text" value="0" disabled>
     </div>
-    <button>
-      <i class="fas fa-plug"></i>
-    </button>
+    <div class="sub">
+      <button class="subex1">
+        <i class="fas fa-plug"></i>
+      </button>
+    </div>
+    
+    <h2>Exercice 2</h2>
+    <div class="plusminus">
+      <label for="plus"></label>
+      <input id="plus" type="text" value="0" disabled>
+    </div>
+    <div class="sub2plus">
+      <button class="subplus">
+        <i class="fas fa-plus"></i>
+      </button>
+    </div>
+    <div class="sub2minus">
+      <button class="subminus">
+        <i class="fas fa-minus"></i>
+      </button>
+    </div>
   </div>
+
   <script src="app.js"></script>
 </body>
 </html>
