--- a/vanilla/ex3/index.html
+++ b/vanilla/ex3/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>Exercice Partie 3</title>
+  <title>Exercice</title>
 </head>
 <body>
   <div class="main">
@@ -36,6 +36,36 @@
         <i class="fas fa-minus"></i>
       </button>
     </div>
+
+    <h2>Exercice 4</h2>
+    <button class="one">
+      <i class="fas fa-dice-one"></i>
+    </button>
+    <button class="two">
+        <i class="fas fa-dice-two"></i>
+    </button>
+    <button class="three">
+        <i class="fas fa-dice-three"></i>
+    </button>
+    <button class="four">
+        <i class="fas fa-dice-four"></i>
+    </button>
+    <button class="five">
+        <i class="fas fa-dice-five"></i>
+    </button>
+
+    <div class="rectangle"></div>
+
+    <h2>Exercice 5</h2>
+    <div class="borderup"></div>
+    <div class="grid">
+    <div class="borderleft"></div>
+    <div class="area">
+      <div class="square"></div>
+    </div>
+    <div class="borderright"></div>
+   </div>
+   <div class="borderdown"></div>
   </div>
 
   <script src="app.js"></script>
