--- a/vanilla/ex3/index.html
+++ b/vanilla/ex3/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="main">
+    <div class="ex">
     <h2>Exercice 1</h2>
     <div class="input">
       <label for="number"></label>
@@ -20,7 +21,8 @@
         <i class="fas fa-plug"></i>
       </button>
     </div>
-    
+  </div>
+  <div class="ex1">
     <h2>Exercice 2</h2>
     <div class="plusminus">
       <label for="plus"></label>
@@ -36,8 +38,10 @@
         <i class="fas fa-minus"></i>
       </button>
     </div>
-
-    <h2>Exercice 4</h2>
+  </div>
+    
+  <div class="ex3">
+    <h2>Exercice 3</h2>
     <button class="one">
       <i class="fas fa-dice-one"></i>
     </button>
@@ -55,8 +59,9 @@
     </button>
 
     <div class="rectangle"></div>
-
-    <h2>Exercice 5</h2>
+  </div>
+  <div class="ex">
+    <h2>Exercice 4</h2>
     <div class="borderup"></div>
     <div class="grid">
     <div class="borderleft"></div>
@@ -66,6 +71,7 @@
     <div class="borderright"></div>
    </div>
    <div class="borderdown"></div>
+  </div>
   </div>
 
   <script src="app.js"></script>
